Fixed stretching logo on smartphones

--- a/css/main.scss
+++ b/css/main.scss
@@ -41,7 +41,6 @@ $on-laptop:        800px;
 
 .logo {
     width: 25%;
-    height: 25%;
     display: inline-block;
 
     img {
